@@ -13,6 +13,7 @@ setClass("coastline", contains="oce")
 setClass("ctd", contains="oce")
 setClass("drifter", contains="oce")
 setClass("echosounder", contains="oce")
+setClass("lisst", contains="oce")
 setClass("lobo", contains="oce")
 setClass("met", contains="oce")
 setClass("tdr", contains="oce")
